cargo-features = ["default-run"]

[package]
name = "rust_game"
version = "0.1.0"
authors = ["benheid <benheid@users.noreply.guthub.com>", "SergenCiftci"]
edition = "2018"
default-run = "main"

[dependencies]
cortex-m = "0.5.0"
alloc-cortex-m = "0.3.4"
cortex-m-rt = "0.6.4"
cortex-m-semihosting = "0.3.0"
libm = "0.1.2"
math = {git = "https://github.com/nagisa/math.rs.git"}
[patch.crates-io.cortex-m-rt]
git = "https://github.com/rust-embedded/cortex-m-rt.git"
[dependencies.stm32f7-discovery]
git = "https://github.com/benheid/stm32f7-discovery.git"
branch = "feature/partial_eq_color"
[dependencies.stm32f7]
version = "0.3.2"
features = ["stm32f7x6", "rt"]
[dependencies.smoltcp]
#version = "0.5.0"
git = "https://github.com/astro/smoltcp.git"
branch = "dhcp"
default-features = false
features = ["alloc", "socket-raw", "socket-udp", "socket-tcp", "socket-icmp", "proto-ipv4", "proto-dhcpv4"]

[dependencies.font8x8]
version = "0.2.4"
default-features = false

[dependencies.rand]
version = "0.6"
default-features = false

[profile.release]
lto = true